# NeuronalNetwork

./: CMakeLists.txt  README.txt  main.cpp  neuron.cpp  neuron.h
